bug 362910 - js_GetMethod cleanup. r=brendan